# flowlogs-reader

./: .gitignore  .travis.yml  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
flowlogs_reader/: __init__.py  __main__.py  aggregation.py  flowlogs_reader.py
tests/: __init__.py  test_flowlogs_reader.py  test_main.py
tests/data/: flows.parquet
